--- a/set.env
+++ b/set.env
@@ -14,5 +14,5 @@ STARTING_BOT_MESSAGE=oui
 ANTI_VUE_UNIQUE=non
 PM_CHATBOT=non
 HEROKU=non
-DATABASE_URL=postgresql://ishigami_enzo_user:qGsqqlVWvuMPXen5n2T6mCuT6JfO1b6W@dpg-crahj3aj1k6c73c24e70-a.oregon-postgres.render.com/ishigami_enzo
+DATABASE_URL=postgresql://enzo_bot_user:S85iOQ1zDHrlBSaLFoPUi0PqZw0Y6ySm@dpg-cr7i7pqj1k6c739t0m10-a.oregon-postgres.render.com/enzo_bot
 ANTI_COMMAND_SPAM=non
